// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create project 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--if-->
    <li>Create project</li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-create-form\\">
    <form>
      <div class=\\"group\\">
        <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Name</label>
      </div>
      <div class=\\"group\\">
        <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Current Work Directory</label>
      </div>
      <div class=\\"group\\">
        <button type=\\"submit\\"><span>Create</span></button>
      </div>
    </form>
  </div>
  <!--ProjectForm-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`create project 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <a class=\\"project-card\\" href=\\"projects/1\\"><span class=\\"name\\">Test</span></a>
    <!--for-->
    <a class=\\"project-card project-card-create\\" href=\\"projects/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--ProjectsList-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
